# sharepaste.oo

./: .gitignore~  .gitmodules  COPYRIGHT  LICENSE  Package.swift  README.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: android.yml
android/: .editorconfig  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: baseline_app_settings_alt.xml  baseline_app_settings_alt_plain.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher3_round.xml
android/app/src/main/res/values/: strings.xml  themes.xml  (+2 more)
android/app/src/source-ambient/res/: LICENSE-CC-BY-ND
android/app/src/source-fdroid/play/: contact-website.txt
android/app/src/source-original/res/: LICENSE-COPYRIGHT-ALL-RIGHTS-RESERVED
android/core/: build.gradle  build.gradle.kts  build.gradle.kts.zz
android/core/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/rsnative/: build.gradle
android/temp_app/: build.gradle.kts  build.gradle.kts.zz
android/temp_app/src/main/: AndroidManifest.xml
apple/Sources/Foobar/: SafeAddition+Extensions.swift  SafeCalculator.swift  SafeMultiply.swift
apple/Sources/UniFFI/: foobar.swift
apple/Tests/FoobarTests/: SafeCalculatorTests.swift
rust/: Cargo.toml  build-ios.sh  rust-toolchain.toml
rust/foobar/: Cargo.toml
rust/foobar/src/: lib.rs
rust/uniffi-bindgen/: Cargo.toml
(+89 files in other folders)
